force-app/main/default/objects/vlocity_ps__Picklist__c/fields/vlocity_ps__Code__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Code__c</fullName>
    <description>The code name of the Vlocity Picklist. Used to identify the picklist across systems.</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>