force-app/main/default/objects/vlocity_ps__Picklist__c/fields/vlocity_ps__DataType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DataType__c</fullName>
    <description>Data type of the values in this picklist: text, number, date, date/time or boolean.</description>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>