force-app/main/default/objects/vlocity_ps__Picklist__c/fields/vlocity_ps__GlobalId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__GlobalId__c</fullName>
    <label>Global Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>