force-app/main/default/objects/vlocity_ps__Picklist__c/fields/vlocity_ps__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__GlobalKey__c</fullName>
    <description>The globally unique identifier of this Vlocity Picklist. Used to identify the Vlocity Picklist across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique picklist identifier can be used.</description>
    <externalId>true</externalId>
    <label>Global Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>