force-app/main/default/objects/vlocity_ps__Picklist__c/fields/vlocity_ps__IsPublic__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsPublic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>