force-app/main/default/objects/vlocity_ps__Picklist__c/fields/vlocity_ps__UnitOfMeasureName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__UnitOfMeasureName__c</fullName>
    <label>Unit Of Measure Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>